--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,4 +1,14 @@
+$primary-color: #272727;
+$accent-color: #ff652f;
+$text-color: #fff;
+$font-weights: (
+  "regular": 400,
+  "medium": 500,
+  "bold": 700,
+);
+
 body {
-  background-color: lightgray;
-  color: blue;
+  background-color: $primary-color;
+  font-weight: map-get($font-weights, bold);
+  color: $text-color;
 }
