--- a/scss/style.scss
+++ b/scss/style.scss
@@ -9,6 +9,18 @@ $font-weights: (
 
 body {
   background-color: $primary-color;
-  font-weight: map-get($font-weights, bold);
   color: $text-color;
+}
+
+.main {
+  width: 80%;
+  margin: 0 auto;
+  // & = parent
+  #{&}__paragraph {
+    font-weight: map-get($font-weights, "bold");
+
+    &:hover {
+      color: pink;
+    }
+  }
 }
