Create function for font-weight

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,10 @@
 @import "./resets";
 @import "./variables";
 
+@function weight($weight-name) {
+  @return map-get($font-weights, $weight-name);
+}
+
 body {
   background-color: $primary-color;
   color: $text-color;
@@ -9,9 +13,8 @@ body {
 .main {
   width: 80%;
   margin: 0 auto;
-  // & = parent
   #{&}__paragraph {
-    font-weight: map-get($font-weights, "bold");
+    font-weight: weight(bold);
 
     &:hover {
       color: pink;
