--- a/scss/style.scss
+++ b/scss/style.scss
@@ -20,13 +20,20 @@
   }
 }
 
+// media query
+@mixin mobile() {
+  @media (max-width: $mobile) {
+    @content;
+  }
+}
+
 body {
   background-color: $primary-color;
   color: $text-color;
 }
 
 .main {
-  @include flexCenter(column);
+  @include flexCenter(row);
   width: 80%;
   margin: 0 auto;
   #{&}__paragraph {
@@ -35,6 +42,9 @@ body {
     &:hover {
       color: pink;
     }
+  }
+  @include mobile {
+    flex-direction: column;
   }
 }
 
