Extend an element

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -36,11 +36,18 @@ body {
   @include flexCenter(row);
   width: 80%;
   margin: 0 auto;
-  #{&}__paragraph {
+  #{&}__paragraph1 {
     font-weight: weight(bold);
 
     &:hover {
       color: pink;
+    }
+  }
+  #{&}__paragraph2 {
+    @extend .main__paragraph1;
+
+    &:hover {
+      color: $accent-color;
     }
   }
   @include mobile {
