--- a/scss/style.scss
+++ b/scss/style.scss
@@ -34,7 +34,7 @@ body {
 
 .main {
   @include flexCenter(row);
-  width: 80%;
+  width: 80% - 40%;
   margin: 0 auto;
   #{&}__paragraph1 {
     font-weight: weight(bold);
