Update file structure. Use live sass compiler extension and live server

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,5 +1,9 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+
 @import "./resets";
 @import "./variables";
+
+@import "./header";
 
 @function weight($weight-name) {
   @return map-get($font-weights, $weight-name);
@@ -13,12 +17,12 @@
 }
 
 // dark or light theme
-@mixin theme($light-theme: true) {
-  @if ($light-theme) {
-    background-color: lighten($primary-color, 50%);
-    color: darken($text-color, 100%);
-  }
-}
+// @mixin theme($light-theme: true) {
+//   @if ($light-theme) {
+//     background-color: lighten($bg-body, 50%);
+//     color: darken($text-color, 100%);
+//   }
+// }
 
 // media query
 @mixin mobile() {
@@ -28,14 +32,18 @@
 }
 
 body {
-  background-color: $primary-color;
+  background-color: $bg-body;
   color: $text-color;
+  font-family: "Roboto", sans-serif;
 }
 
 .main {
-  @include flexCenter(row);
-  width: 80% - 40%;
   margin: 0 auto;
+  max-width: $max-width;
+  background-color: $bg-main;
+  background-color: red;
+  @include flexCenter(row);
+
   #{&}__paragraph1 {
     font-weight: weight(bold);
 
@@ -55,6 +63,6 @@ body {
   }
 }
 
-.light {
-  @include theme($light-theme: true);
-}
+// .light {
+//   @include theme($light-theme: true);
+// }
