--- a/app/scss/globals/_boilerplate.scss
+++ b/app/scss/globals/_boilerplate.scss
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+@use "../util" as u;
 
 html {
   box-sizing: border-box;
@@ -15,7 +15,7 @@ html {
 body {
   margin: 0;
   padding: 0;
-  font-family: "Roboto", sans-serif;
-  background-color: hsl(0, 0%, 11%);
-  color: hsl(0, 0%, 100%);
+  font-family: u.$font;
+  background-color: var(--background-color);
+  color: var(--text-color);
 }
