--- a/app/scss/globals/_colors.scss
+++ b/app/scss/globals/_colors.scss
@@ -1,3 +1,9 @@
+// The root takes priority
+:root {
+  --background-color: hsl(0, 0%, 11%);
+  --text-color: hsl(0, 0%, 100%);
+}
+
 $clr-almond: #f5e8e1;
 $white: #fff;
 $black: #000;
