Add grid layout and import file into style

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,59 +1,2 @@
 @forward "globals";
-
-@import "./header";
-
-@function weight($weight-name) {
-  @return map-get($font-weights, $weight-name);
-}
-
-@mixin flexCenter($direction) {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: $direction;
-}
-
-// dark or light theme
-// @mixin theme($light-theme: true) {
-//   @if ($light-theme) {
-//     background-color: lighten($bg-body, 50%);
-//     color: darken($text-color, 100%);
-//   }
-// }
-
-// media query
-@mixin mobile() {
-  @media (max-width: $mobile) {
-    @content;
-  }
-}
-
-.main {
-  margin: 0 auto;
-  max-width: $max-width;
-  background-color: $bg-main;
-  background-color: red;
-  @include flexCenter(row);
-
-  #{&}__paragraph1 {
-    font-weight: weight(bold);
-
-    &:hover {
-      color: pink;
-    }
-  }
-  #{&}__paragraph2 {
-    @extend .main__paragraph1;
-
-    &:hover {
-      color: $accent-color;
-    }
-  }
-  @include mobile {
-    flex-direction: column;
-  }
-}
-
-// .light {
-//   @include theme($light-theme: true);
-// }
+@forward "layout";
