Build desktop layout

--- a/app/scss/layout/_grid.scss
+++ b/app/scss/layout/_grid.scss
@@ -3,12 +3,13 @@
   display: grid;
   // grid template for 2 columns and 1 row
   grid-template-columns: 1fr; // in the template grid we want 1 col. fr unit
-  grid-template-rows: auto auto;
+  grid-template-rows: auto auto; // hight is adjusting to its content
   gap: 40px;
 
   // media query for 900px and up
   @media (min-width: 900px) {
     grid-template-columns: 2fr 1fr; // first col will be 2 times as the second col
+    grid-template-rows: auto;
   }
 
   &__main,
