Create mixin for max-width breakingpoints

--- a/app/scss/layout/_grid.scss
+++ b/app/scss/layout/_grid.scss
@@ -29,5 +29,9 @@
 
   &__sidebar {
     background-color: hsl(300, 100%, 50%);
+
+    @include u.breakpoint-down(medium) {
+      text-align: center;
+    }
   }
 }
