Add functions to handle rem and em unit for fonts and breakingpoints

--- a/app/scss/globals/_boilerplate.scss
+++ b/app/scss/globals/_boilerplate.scss
@@ -3,6 +3,8 @@
 html {
   box-sizing: border-box;
   // default 16px - depending on browser
+  // HIGHLIGHT -> 1rem = 10px
+  // font-size: 62.5%;
   font-size: 100%;
 }
 
