--- a/app/scss/globals/_boilerplate.scss
+++ b/app/scss/globals/_boilerplate.scss
@@ -18,6 +18,6 @@ body {
   margin: 0;
   padding: 0;
   font-family: u.$font;
-  background-color: var(--background-color);
+  background-color: var(--body__bg-color);
   color: var(--text-color);
 }
